kubes/rappi-demo/chat/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rappi-demo-chat
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
      - chat.atelier.run
      secretName: rappi-demo-chat-producer
  rules:
    - host: chat.atelier.run
      http:
        paths:
          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: rappi-demo-sockets
                port:
                  number: 1338
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: rappi-demo-chat-api
                port:
                  number: 1337
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rappi-demo-chat-app
                port:
                  number: 80
